# critical-infra-anomaly-detector

./: .gitignore  README.md  pyproject.toml  requirements.txt
ciad_demo/: README.md  ciad_bokeh_demo.py  requirements.txt
examples/: make_synthetic_scada.py
scripts/: download_placeholder.py
src/infra_anomdet/: cli.py  utils.py
src/infra_anomdet/eval/: metrics.py
src/infra_anomdet/models/: sklearn_models.py  torch_models.py
src/infra_anomdet/thresholding/: thresholds.py
tests/: test_imports.py
